# soccer_simple_reg

./: .gitignore  README.md  config.ps1  output.txt  pyproject.toml  requirements.txt
ml_boilerplate_module/: __init__.py
ml_boilerplate_module/utils/: utils.py
notebooks/: explore.py  nba_team_analysis.ipynb  soccer_simple_lin_reg.ipynb
