[tool.black]
line_length = 88
skip_string_normalization = false

[tool.flake8]
max-line-length = 88

[tool.mypy]
ignore_missing_imports = true
strict = true
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
pretty = true
warn_unreachable = true

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_boilerplate_module"
version = "1.0.0"
dependencies = [
    "pandas",
    "mypy",
    "black",
    "flake8",
    "isort"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]